--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/zoom.css" type="text/css" />
   <link rel="stylesheet" href="css/index.css" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico">
-  <title>导出记录</title>
+  <title>聊天记录</title>
 </head>
 <body>
   <div class="aside" style="left: 0;"></div>
